<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item android:title="@string/submit">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/love"
                    android:title="@string/title_home" />
            <item
                    android:id="@+id/nav_manage"
                    android:icon="@drawable/ic_bookmark_black_24dp"
                    android:title="@string/dokumen" />
            <item
                    android:id="@+id/nav_slideshow"
                    android:icon="@drawable/ic_photo_camera_black_24dp"
                    android:title="@string/gambar" />
            <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/ic_map_black_24dp"
                    android:title="@string/faq" />
        </menu>
    </item>

</menu>