<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ImageView android:layout_width="wrap_content"
               android:layout_gravity="center"
               android:id="@+id/log"
               android:src="@drawable/logo"
               android:layout_margin="@dimen/margin"
               android:layout_height="@dimen/app_bar_height"/>
    <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content"
                  android:layout_marginStart="@dimen/margin"
                  android:text="@string/welcome"
                  android:id="@+id/wel"
                  android:textSize="@dimen/title"
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="wrap_content"
                  android:text="@string/app_name"
                  android:textStyle="bold"
                  android:layout_marginStart="@dimen/margin"
                  android:layout_toRightOf="@+id/wel"
                  android:textSize="@dimen/title"
                  android:layout_height="wrap_content"/>
    </RelativeLayout>
    <Button android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/daf"
            android:background="@color/colorPrimary"
            android:text="@string/sign"
            android:textSize="@dimen/text_margin"
            android:layout_marginTop="@dimen/item_width"
            android:layout_height="wrap_content"/>
    <Button android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textSize="@dimen/text_margin"
            android:layout_margin="@dimen/fab_margin"
            android:layout_height="wrap_content"/>
    <TextView android:layout_width="wrap_content"
              android:text="@string/term"
              android:layout_marginTop="@dimen/fab_margin"
              android:layout_gravity="center"
              android:textColor="@color/colorPrimaryDark"
              android:textSize="@dimen/label"
              android:layout_height="wrap_content"/>
</LinearLayout>