<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content"
                      android:text="@string/app_name"
                      android:textStyle="bold"
                      android:id="@+id/reg"
                      android:textSize="@dimen/text_margin"
                      android:layout_height="wrap_content"/>
            <TextView android:layout_width="wrap_content"
                      android:text="@string/name"
                      android:textSize="@dimen/text_margin"
                      android:layout_marginStart="@dimen/margin"
                      android:layout_toEndOf="@+id/reg"
                      android:layout_height="wrap_content"/>
        </RelativeLayout>
        <TextView android:layout_width="wrap_content"
                  android:text="@string/name"
                  android:layout_marginStart="@dimen/margin"
                  android:layout_marginTop="@dimen/fab_margin"
                  android:textSize="@dimen/label"
                  android:layout_height="wrap_content"/>
        <EditText android:layout_width="match_parent"
                  android:hint="@string/name"
                  android:layout_marginStart="@dimen/margin"
                  android:layout_marginEnd="@dimen/item_width"
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="wrap_content"
                  android:text="@string/ttl"
                  android:layout_marginStart="@dimen/margin"
                  android:layout_marginTop="@dimen/fab_margin"
                  android:textSize="@dimen/label"
                  android:layout_height="wrap_content"/>
        <EditText android:layout_width="match_parent"
                  android:hint="@string/ttl"
                  android:layout_marginStart="@dimen/margin"
                  android:layout_marginEnd="@dimen/item_width"
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="wrap_content"
                  android:text="@string/add"
                  android:layout_marginStart="@dimen/margin"
                  android:layout_marginTop="@dimen/fab_margin"
                  android:textSize="@dimen/label"
                  android:layout_height="wrap_content"/>
        <EditText android:layout_width="match_parent"
                  android:hint="@string/add"
                  android:layout_marginStart="@dimen/margin"
                  android:layout_marginEnd="@dimen/item_width"
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="wrap_content"
                  android:text="@string/job"
                  android:layout_marginStart="@dimen/margin"
                  android:layout_marginTop="@dimen/fab_margin"
                  android:textSize="@dimen/label"
                  android:layout_height="wrap_content"/>
        <EditText android:layout_width="match_parent"
                  android:hint="@string/job"
                  android:layout_marginStart="@dimen/margin"
                  android:layout_marginEnd="@dimen/item_width"
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="wrap_content"
                  android:text="@string/ktp"
                  android:layout_marginStart="@dimen/margin"
                  android:layout_marginTop="@dimen/fab_margin"
                  android:textSize="@dimen/label"
                  android:layout_height="wrap_content"/>
        <EditText android:layout_width="match_parent"
                  android:hint="@string/ktp"
                  android:layout_marginStart="@dimen/margin"
                  android:layout_marginEnd="@dimen/item_width"
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="wrap_content"
                  android:text="@string/id"
                  android:layout_marginStart="@dimen/margin"
                  android:layout_marginTop="@dimen/fab_margin"
                  android:textSize="@dimen/label"
                  android:layout_height="wrap_content"/>
        <EditText android:layout_width="match_parent"
                  android:hint="@string/id"
                  android:layout_marginStart="@dimen/margin"
                  android:layout_marginEnd="@dimen/item_width"
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="wrap_content"
                  android:text="@string/pass"
                  android:layout_marginStart="@dimen/margin"
                  android:layout_marginTop="@dimen/fab_margin"
                  android:textSize="@dimen/label"
                  android:layout_height="wrap_content"/>
        <EditText android:layout_width="match_parent"
                  android:hint="@string/pass"
                  android:layout_marginStart="@dimen/margin"
                  android:layout_marginEnd="@dimen/item_width"
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="wrap_content"
                  android:text="@string/up"
                  android:layout_marginStart="@dimen/margin"
                  android:layout_marginTop="@dimen/fab_margin"
                  android:textSize="@dimen/label"
                  android:layout_height="wrap_content"/>
        <EditText android:layout_width="match_parent"
                  android:hint="@string/name"
                  android:layout_marginStart="@dimen/margin"
                  android:layout_marginEnd="@dimen/item_width"
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="wrap_content"
                  android:text="@string/con"
                  android:layout_marginStart="@dimen/margin"
                  android:layout_marginTop="@dimen/fab_margin"
                  android:textSize="@dimen/label"
                  android:layout_height="wrap_content"/>
        <RadioGroup android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_height="wrap_content">
            <RadioButton android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
            <RadioButton android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
            <RadioButton android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
            <RadioButton android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
            <RadioButton android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
            <RadioButton android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
            <RadioButton android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
            <RadioButton android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
            <RadioButton android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
            <RadioButton android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
        </RadioGroup>
        <TextView android:layout_width="wrap_content"
                  android:layout_marginStart="@dimen/fab_margin"
                  android:text="@string/num"
                  android:layout_height="wrap_content"/>
        <RelativeLayout android:layout_width="wrap_content"
                        android:layout_marginTop="@dimen/item_width"
                        android:layout_height="wrap_content">
            <CheckBox android:layout_width="wrap_content"
                      android:layout_marginStart="@dimen/margin"
                      android:layout_marginTop="@dimen/fab_margin"
                      android:layout_height="wrap_content"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_marginStart="@dimen/item_width"
                      android:text="@string/agg"
                      android:layout_height="wrap_content"/>
        </RelativeLayout>
        <Button android:layout_width="wrap_content"
                android:text="@string/sub"
                android:textColor="@color/white"
                android:id="@+id/tar"
                android:background="@color/light_blue"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_gravity="center"
                android:layout_height="wrap_content"/>
        <TextView android:layout_width="wrap_content"
                  android:text="@string/term"
                  android:layout_marginTop="@dimen/fab_margin"
                  android:layout_gravity="center"
                  android:textColor="@color/colorPrimaryDark"
                  android:textSize="@dimen/label"
                  android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>