<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/container_manager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

        <!-- view for AdMob Interstitial Ad -->
        <TextView
                android:id="@+id/app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/res"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/app_title"
                android:layout_centerHorizontal="true"
                android:text="@string/age"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
                android:id="@+id/next_level_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/dis" />

        <com.google.android.gms.maps.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

        </com.google.android.gms.maps.MapView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>